Removed optimizeLegibility due to bug in linux (and other?) builds of webkit

--- a/app/stylesheets/typography/_typography.scss
+++ b/app/stylesheets/typography/_typography.scss
@@ -6,7 +6,6 @@ Enhanced Fonts for elements
 body {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
-  text-rendering: optimizeLegibility;
   }
 .wf-active body {
   @include gesta;
